fixed cart/schedule overlap

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -19,7 +19,7 @@ body {
 }
 
 .smallerSchedule {
-  height: 560px !important;
+  /*height: 560px !important;*/
   bottom: 253px !important;
 }
 
